Fix horizontal scrollbar on mobile

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -55,6 +55,10 @@ h1 {
 .header-top-text {
     display: inline-block;
     margin-top: rem-calc(2);
+
+    @include breakpoint(small only) {
+        font-size: rem-calc(17);
+    }
 }
 
 .social-icon {
@@ -62,7 +66,9 @@ h1 {
 }
 
 .menu-wrapper {
-    padding-top: rem-calc(67);
+    @include breakpoint(medium) {
+        padding-top: rem-calc(67);
+    }
 }
 
 .menu {
@@ -75,7 +81,8 @@ h1 {
     
 
     @include breakpoint(small only) {
-        padding-top: rem-calc(15);
+        float: none;
+        padding-top: rem-calc(0);
         margin-top: 0;
     }
 }
@@ -99,6 +106,17 @@ h1 {
 .header {
     position: relative;
     z-index: 0;
+}
+
+.logo {
+}
+
+.logo-link {
+    @include breakpoint(small only) {
+        margin: 0 rem-calc(15);
+        max-width: 100%;
+        width: 100%;
+    }    
 }
 
 /* Footer */
@@ -281,6 +299,8 @@ h1 {
     padding-top: rem-calc(61); 
     padding-bottom: rem-calc(49);
     margin-bottom: rem-calc(93);
+
+    overflow: hidden;
 
     border: solid rem-calc(15) #F4F4F4;
     background-color: #FCFCFC;
